--- a/zszhApp_v2/src/zszh_welcome/PopWin_Save.mxml
+++ b/zszhApp_v2/src/zszh_welcome/PopWin_Save.mxml
@@ -68,7 +68,7 @@
 			}
 			
 			
-			public function GetSnapshot()
+			public function GetSnapshot():void
 			{
 				/*var imageSnap:ImageSnapshot = ImageSnapshot.captureImage(text1); 
 				var imageByteArray:ByteArray = imageSnap.data as ByteArray; 
